@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class App{
    +getCompany()
    +static getInstance()
}

class SNSUser{
    -String name
    -String phoneNumber
    -String faxNumber
    -String homeAddress
    -String emailAddress
    -String websiteAddress
    -Double openingHours
    -Double closingHours
    -Double slotDuration
    -Integer maxNumVaccinesPerSlot
    +SNSUser(name, address, gender, phoneNumber, birthDate,\nemailAddress, snsUserNumber,citizenCardNumber)

}


class LoadSNSUserUI {
}


class LoadSNSUserController{
    +newCSVReader(String fileLocation)
    +validateTempList(List<SNSUser> list)
    +importSNSUserCSV()
    +clearTempArray()
    +getCSVFileString()
}

class Company {
    -designation
    +getCSVReader()
    +getSNSUserStore()
}

class SNSUserStore{
+importSNSUserCSV(List<SNSUser> list)
+validateTempList(List<SNSUser> list)
+validateSNSUser(String phoneNumber,\nString homeAddress, String emailAddress)
+registerSNSUser(SNSUser User)
+addSNSUser(SNSUser user)
+newSNSUser(String name, String gender, String birthDate, String homeAddress,\nString phoneNumber, String emailAddress, String snsUserNumber, String citizenCardNumber)
}

class CSVReader{
    +readCSVFile(String fileLocation)
    +validateHeader(String line)
    -getCompleteHeader()
}


LoadSNSUserUI .down.> LoadSNSUserController
LoadSNSUserController .down.> Company
Company "1" -down-- "1" SNSUserStore : has >
Company "1" -down- "1" CSVReader : has >
CSVReader "1" -down- "*" SNSUser : loads >
LoadSNSUserController ..> SNSUser
LoadSNSUserController ..> App


@enduml